edited experience section

--- a/index.html
+++ b/index.html
@@ -343,16 +343,57 @@
     <section id="experience" class="section scrollspy">
       <h3 class="page-title white-text teal">Experience</h3>
       <div class="container">
-        <div class="row">
+        <div class="col">
 
           <div class="col s14 m8 l6">
             <div class="card">
               <div class="card-content">
                 <div class="row">
-                  <div class="col s12 m2">
+                  <!-- <div class="col s12 m2">
                     <a href="https://cse.buet.ac.bd/research/group/gd/" target="_blank"><img alt="Chaldal logo"
                         src="/assets/img/favicon/Buet.gif" class="responsive-img center-block" /></a>
+                  </div> -->
+                  <div class="col s12 m10">
+                    <p>
+                      <span class="card-title"><a href="https://startnetwork.org/" target="_blank"
+                          class="teal-text hoverline"><b>Start Network</b></a></span>
+                    </p>
                   </div>
+                </div>
+                Here, I work as a <b>consultant</b>. On their Forecast-based, Warning, Analysis, and Response Network (FOREWARN) project, I conduct a <b>Data Science</b> program. I also work with the team and provide technical assistance in the pursuit of a peer-reviewed publication.
+
+                <!--<div class="role brown-text text-darken-2">Software Engineer</div>-->
+                <!-- <ul>
+                  <h5><b><i>k</i>-Safe Labelings of Connected Graphs</b></h5>
+                  <h5></h5> -->
+                  
+                  <!-- <li>
+                    This manuscript is currently under review.
+                  </li>
+                </ul> -->
+                <!-- <ul>
+                  <h5><b>Grid Graphs are 2-Interval Pairwise Compatibility Graphs</b></h5>
+                  <h5></h5> -->
+                  
+                  <!-- <li>
+                    This manuscript is currently under review.
+                  </li>
+                </ul> -->
+              </div>
+              <div class="card-action">
+                <span>March 2022 - Present | Dhaka, Bangladesh</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col s14 m8 l6">
+            <div class="card">
+              <div class="card-content">
+                <div class="row">
+                  <!-- <div class="col s12 m2">
+                    <a href="https://cse.buet.ac.bd/research/group/gd/" target="_blank"><img alt="Chaldal logo"
+                        src="/assets/img/favicon/Buet.gif" class="responsive-img center-block" /></a>
+                  </div> -->
                   <div class="col s12 m10">
                     <p>
                       <span class="card-title"><a href="https://cse.buet.ac.bd/research/group/gd/" target="_blank"
@@ -360,36 +401,37 @@
                     </p>
                   </div>
                 </div>
+                I worked as an <b>undergraduate researcher</b> under the supervision of Professor <b>Dr. Md. Saidur Rahman</b>. My undergraduate research was mostly concerned with graph theory and algorithm design.
+
                 <!--<div class="role brown-text text-darken-2">Software Engineer</div>-->
-                <ul>
+                <!-- <ul>
                   <h5><b><i>k</i>-Safe Labelings of Connected Graphs</b></h5>
-                  <h5></h5>
+                  <h5></h5> -->
+                  <ul>
                   <li>
-                    An upper bound on <i>k</i>-safe labelings of all connected graphs based on the size of the maximum clique in the graph
-                    is proposed. Proof for this upper bound leads to a polynomial-time algorithm for finding the <i>k</i>-safe labelings of any
-                    connected graph.
+                    We developed a polynomial-time algorithm for assigning transmitter frequencies in a tower network that minimizes overlapping signals and optimizes the frequency spectrum.
                   </li>
-                  <li>
+                  <!-- <li>
                     This manuscript is currently under review.
                   </li>
-                </ul>
-                <ul>
+                </ul> -->
+                <!-- <ul>
                   <h5><b>Grid Graphs are 2-Interval Pairwise Compatibility Graphs</b></h5>
-                  <h5></h5>
+                  <h5></h5> -->
                   <li>
-                    Not all graphs are PCGs (Pairwise Compatibility Graph). A graph G is called a <i>k</i>-interval PCG if there exists an
-                    edge- weighted tree <i>T</i> and <i>k</i> mutually exclusive intervals of non-negative real numbers such that there is an edge
-                    between two vertices in <i>G</i> if and only if the distance between their corresponding leaves in <i>T</i> lies within any of the
-                    <i>k</i> intervals. This research is intended for showing that grid graphs and a subclass of 3D grid graphs are 2-interval
-                    PCGs.
+                    Additionally, we worked on another research project in which we studied a type of graph
+                    that is used to rebuild evolutionary relationships between organisms. This particular graph is referred to as
+                    the Pairwise Compatibility Graph (PCG, for short). It has been proven that not every graph is a PCG. But,
+                    we have found that grid graphs and a subclass of 3D grid graphs are 2-interval PCGs.
                   </li>
-                  <li>
+                  </ul>
+                  <!-- <li>
                     This manuscript is currently under review.
                   </li>
-                </ul>
+                </ul> -->
               </div>
               <div class="card-action">
-                <span>October 2019 - Present | Dhaka, Bangladesh</span>
+                <span>October 2019 - March 2022 | Dhaka, Bangladesh</span>
               </div>
             </div>
           </div>
@@ -399,10 +441,11 @@
             <div class="card">
               <div class="card-content">
                 <div class="row">
-                  <div class="col s12 m2">
-                    <a href="https://chaldal.tech/" target="_blank"><img alt="Chaldal logo"
+                  <!-- <div class="col s12 m2">
+                     <a href="https://chaldal.tech/" target="_blank"><img alt="Chaldal logo"
                         src="/assets/img/chaldal-logo.jpg" class="responsive-img center-block" /></a>
-                  </div>
+                        <span class="teal">Software Engineer</span>
+                  </div> -->
                   <div class="col s12 m10">
                     <p>
                       <span class="card-title"><a href="https://chaldal.tech/" target="_blank"
@@ -410,7 +453,7 @@
                     </p>
                   </div>
                 </div>
-                <div class="role brown-text text-darken-2">Software Engineer</div>
+                <!-- <div class="role brown-text text-darken-2">Software Engineer</div> -->
                 <ul>
                   <h5><b>Customer Experience Team</b></h5>
                   <h5></h5>
@@ -442,7 +485,7 @@
                 </ul>
               </div>
               <div class="card-action">
-                <span>March 2021 - Present | Dhaka, Bangladesh</span>
+                <span>March 2021 - February 2022 | Dhaka, Bangladesh</span>
               </div>
             </div>
           </div>
@@ -460,12 +503,19 @@
               <p><ul>
                 <li>
                   <b>Protik Bose Pranto</b>, Bishal Basak Papan, and Md. Saidur Rahman. k-Safe Labelings of Connected Graphs. IEEE International Conference on Telecommunications and Photonics, ICTP (2021).
-                  <a href="https://protikbose.github.io/assets/publication/SafeLabeling.pdf" target="_blank"><span><b>[pdf]</b></span></a>  
+                  <a href="https://www.researchgate.net/profile/Protik_Pranto/publication/359313081_k-Safe_Labelings_of_Connected_Graphs/links/62346c13d545b7729402327c/k-Safe-Labelings-of-Connected-Graphs.pdf" target="_blank"><span><b>[pdf]</b></span></a>  
                 </li>
               </lu></p>
               <p><ul>
                 <li>
                   Bishal Basak Papan, <b>Protik Bose Pranto</b>, and Md. Saidur Rahman. On 2-Interval Pairwise Compatibility Properties of Two Classes of Grid Graphs. The Computer Journal, COMPJ (2021).
+                  <a href="https://academic.oup.com/comjnl/advance-article-abstract/doi/10.1093/comjnl/bxac011/6536120" target="_blank"><span><b>[pdf]</b></span></a>
+                </li>
+              </lu></p>
+              <p><ul>
+                <li>
+                  <b>Protik Bose Pranto</b>, Syed Zami-Ul-Haque Navid, Protik Dey, Gias Uddin, and Anindya Iqbal. Are You Misinformed? A Study of Covid-Related Fake News in Bengali on Facebook.
+                  <a href="https://arxiv.org/ftp/arxiv/papers/2203/2203.11669.pdf" target="_blank"><span><b>[arXiv]</b></span></a>
                 </li>
               </lu></p>
             </div>
@@ -483,7 +533,7 @@
             <div class="card-content">
               <h4>"Are You Misinformed? A Study of Covid-Related Fake News in Bengali on Facebook"</h4>
               <p><u>Author</u>: <b>Protik Bose Pranto</b>, Syed Zamiul Haque Navid, Protik Dey, Gias Uddin, and Anindya Iqbal</p>
-              <p><u>Status</u>: <b>Submitted</b> at The ACM CHI Conference on Human Factors in Computing Systems, <b>CHI (2022)</b>.</p>
+              <!-- <p><u>Status</u>: <b>Submitted</b> at The ACM CHI Conference on Human Factors in Computing Systems, <b>CHI (2022)</b>.</p> -->
               <br><p>Our opinions and views of life can be shaped by how we perceive the opinions of others on social media like Facebook. 
                 This dependence has increased during COVID-19 periods when we have fewer means to connect with others. 
                 However, fake news related to COVID-19 has become a significant problem on Facebook. Bengali is the seventh most
