color, resume, info updated

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
   <meta property="og:image" content="https://protikbose.github.io/examples/preview.JPG" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@varad_bhogayata" />
-  <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
-  <meta name="twitter:description" content="Software Developer" />
-  <meta name="twitter:url" content="https://twitter.com/varad_bhogayata" />
+  <meta name="twitter:site" content="@BoseProtik" />
+  <meta name="twitter:title" content="Protik Bose Pranto" />
+  <meta name="twitter:description" content="Ph.D student at @SCAI_ASU" />
+  <meta name="twitter:url" content="https://twitter.com/BoseProtik" />
   <meta name="author" content="Protik Bose Pranto" />
   <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." />
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" />
@@ -96,6 +96,10 @@
             class="mdi-social-person small"></i><span>About</span></a>
       </li>
       <li class="bold">
+        <a aria-label="Navigate to the News section" href="#news" class="waves-effect waves-dark teal-text"><i
+            class="mdi-social-notifications small"></i><span>News</span></a>
+      </li>
+      <li class="bold">
         <a aria-label="Navigate to the Experience section" href="#experience"
           class="waves-effect waves-dark teal-text"><i
             class="mdi-action-trending-up small"></i><span>Experience</span></a>
@@ -110,7 +114,7 @@
         <!-- mdi-av-web small
              mdi-av-my-library-books small-->
         <a aria-label="Navigate to the Research Works section" href="#research_works" class="waves-effect waves-dark teal-text"><i
-            class="mdi-social-school small"></i><span>Research</span></a>
+            class="mdi-action-find-replace small"></i><span>Research</span></a>
       </li>
 
       <li class="bold">
@@ -161,7 +165,7 @@
         <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Varad's resume in a new tab" href="https://protikbose.github.io/assets/resume/Protik_Bose_Pranto_Resume.pdf" target="_blank"
+        <a aria-label="Open Protik's resume in a new tab" href="https://protikbose.github.io/assets/resume/Protik_Bose_Pranto_Resume.pdf" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
@@ -182,6 +186,10 @@
       <li class="bold">
         <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><i
             class="mdi-social-person small"></i><span>About</span></a>
+      </li>
+      <li class="bold">
+        <a aria-label="Navigate to the News section" href="#news"
+          class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>News</span></a>
       </li>
       <li class="bold">
         <a aria-label="Navigate to the Experience section" href="#experience"
@@ -225,15 +233,15 @@
   <main>
     <!-- First Section: Heading lines and image -->
     <section id="intro" class="section scrollspy full-height">
-      <div class="overlay"></div>
+      <!--<div class="overlay"></div>-->
       <div class="container">
         <div class="col-md-9">
-          <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
+          <div class="content section-padding" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
-              <h2>Hi, I'm <span class="teal">Protik Bose Pranto.</span></h2>
-              <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
+              <h2 style="color:#000">Hi, I'm <span class="teal">Protik Bose Pranto.</span></h2>
+              <h5 style="color:#000">A <span class="typing" style="font-weight: 600; color:#267cb9"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-              <h5>"Everything is theoretically possible, until it is done" - Robert Anson Heinlein </h5>
+              <h5 style="color:#000">"Everything is theoretically possible, until it is done" - Robert Anson Heinlein </h5>
             </div>
             <div class="social">
               <a href="https://www.linkedin.com/in/protik-bose-pranto-b67967141/" target="_blank">
@@ -244,6 +252,12 @@
               <a href="https://github.com/ProtikBose" target="_blank">
                 <button class="icon-btn github">
                   <i class="fa fa-github"></i>
+                </button>
+              </a>
+
+              <a href="https://twitter.com/BoseProtik" target="_blank">
+                <button class="icon-btn twitter">
+                  <i class="fa fa-twitter"></i>
                 </button>
               </a>
 
@@ -258,18 +272,11 @@
                   <i class="fa fa-angellist"></i>
                 </button>
               </a> -->
-
-              <!-- <a href="http://linkedin.com/in/protikbose" target="_blank">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-
-                  </span>
-              </a> -->
             </div>
             <div class='buttons'>
               <a href="#about" class="readme">About Me</a>
               <a href="#contact" class="contactme">Contact Me</a>
+              <a href="#news" class="readme">Recent News</a>
             </div>
           </div>
         </div>
@@ -285,26 +292,26 @@
             A Software Developer with a passion for Backend Development and Artificial Intelligence.
 
           </h2>
-        </blockquote> -->        
+        </blockquote> -->    
         <p>
-          I have received my B.Sc (Engg.) in Computer Science and Engineering from <a href="https://www.buet.ac.bd/web/#/" target="_blank"
-          class="teal-text hoverline"><b>Bangladesh University of Engineering and Technology(BUET)</b></a>. 
-
-          I am currently working as a Software Engineer at <a href="https://chaldal.tech/" target="_blank"
-          class="teal-text hoverline"><b>Chaldal Tech</b></a> which is one of the largest online grocery stores in Bangladesh.
-
-        </p>
-        <p>
-          In my present research work, I am working on preventing the spread of Covid related misinformation in social media under the supervision of <a href="https://giasuddin.ca/" target="_blank"
-          class="teal-text hoverline"><b>Dr. Gias Uddin</b></a> and <a href="https://scholar.google.com/citations?user=jAuiNFgAAAAJ&hl=en" target="_blank"
-          class="teal-text hoverline"><b>Dr. Anindya Iqbal</b></a>.
-
-          I completed my undergraduate thesis under the supervision of Professor <a href="http://saidurrahman.buet.ac.bd/" target="_blank"
-          class="teal-text hoverline"><b>Dr. Md. Saidur Rahman</b></a> on Graph Theory and Algorithms.
-        </p>
+          I am a first year PhD student in the Department of Computer Science at <a href="https://www.asu.edu/" target="_blank"
+          class="teal-text hoverline"><b>Arizona State University.</b></a> My research advisor is <a href="https://rakib062.github.io/" target="_blank"
+          class="teal-text hoverline"><b>Prof. Dr. Rakibul Hasan.</b></a>
+        </p>    
         <p>
           My research interests include Human-centered AI Engineering, Computer Vision, Natural Language Processing, Graph Theory, Human-Computer Interaction, Machine Learning and it's applications. 
           I enjoy researching Machine Learning topics and applying my skills to tackle problems that intrigue me. I am also enthusiastic about creating sophisticated programs that solve real-world problems for millions of users.
+        </p>
+        <p>
+          I have received my B.Sc (Engg.) in Computer Science and Engineering from <a href="https://www.buet.ac.bd/web/#/" target="_blank"
+          class="teal-text hoverline"><b>Bangladesh University of Engineering and Technology(BUET)</b></a>. I completed my undergraduate thesis under the supervision of Professor <a href="http://saidurrahman.buet.ac.bd/" target="_blank"
+          class="teal-text hoverline"><b>Dr. Md. Saidur Rahman</b></a> on Graph Theory and Algorithms.
+
+        </p>
+        <p>
+          Besides that, I have worked on preventing the spread of Covid related misinformation in social media under the supervision of <a href="https://giasuddin.ca/" target="_blank"
+          class="teal-text hoverline"><b>Dr. Gias Uddin</b></a> and <a href="https://scholar.google.com/citations?user=jAuiNFgAAAAJ&hl=en" target="_blank"
+          class="teal-text hoverline"><b>Dr. Anindya Iqbal</b></a>.
         </p>
         <!--<p>
           <ul>
@@ -337,6 +344,40 @@
         </p> -->
       </div>
     </section>
+
+    <!--News-->
+    <section id="news" class="section scrollspy">
+      <h3 class="page-title white-text teal">Recent News</h3>
+      <div class="container">
+        <div class="col s12 m6 l6">
+          <div class="card">
+            <div class="card-content">
+              <p><ul>
+                <li>
+                  <b>Mar 2022:</b> Been awarded the SCAI Doctoral Fellowship.
+                </li>
+              </lu></p>
+              <p><ul>
+                <li>
+                  <b>Feb 2022:</b> Got accepted into Arizona State University's PhD in Computer Science program.
+                </li>
+              </lu></p>
+              <p><ul>
+                <li>
+                  <b>Feb 2022:</b> Co-authored paper published in The Computer Journal.
+                </li>
+              </lu></p>
+              <p><ul>
+                <li>
+                  <b>Nov 2021:</b> First-authored paper accepted at ICTP 2021.
+                </li>
+              </lu></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
 
 
     <!-- Third Section: Experience -->
@@ -381,7 +422,7 @@
                 </ul> -->
               </div>
               <div class="card-action">
-                <span>March 2022 - Present | Dhaka, Bangladesh</span>
+                <span>March 2022 - July 2022 | Dhaka, Bangladesh</span>
               </div>
             </div>
           </div>
@@ -967,10 +1008,9 @@
         <div class="col s12 m6 l6">
           <div class="card">
             <div class="card-content">
-              <p><b>Graph Drawing and Information Visualization Laboratory,</b></p>
-              <p><b>Department of Computer Science And Engineering,</b></p>
-              <p><b>ECE Building, West Palashi, Bangladesh University of Engineering and Technology (BUET),</b></p>
-              <p><b>Dhaka-1000, Bangladesh.</b></p>
+              <p><b>ASU School of Computing and Augmented Intelligence,</b></p>
+              <p><b>Department of Computer Science,</b></p>
+              <p><b>699 S Mill Ave, Tempe, AZ 85281, United States</b></p>
             </div>
           </div>
           </div>
@@ -982,10 +1022,10 @@
               class="hoverline">protikbose77@gmail.com</a></a>
         </p>
         <p>
-          <a aria-label="Email Me" href="mailto:1505044.pbp@ugrad.cse.buet.ac.bd" target="_blank" data-position="top"
+          <a aria-label="Email Me" href="mailto:ppranto@asu.edu" target="_blank" data-position="top"
             data-tooltip="Email Me" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:1505044.pbp@ugrad.cse.buet.ac.bd"
-              class="hoverline">1505044.pbp@ugrad.cse.buet.ac.bd</a></a>
+              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:ppranto@asu.edu"
+              class="hoverline">ppranto@asu.edu</a></a>
         </p>
       </div>
     </section>
@@ -995,7 +1035,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Passionate Researcher", "Software Developer", "Tech Enthusiast"],
+      strings: ["Passionate Researcher", "Tech Enthusiast", "Curious Traveler"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
