--- a/index.html
+++ b/index.html
@@ -354,6 +354,16 @@
             <div class="card-content">
               <p><ul>
                 <li>
+                  <b>Apr 2023:</b> presented my current research at the ASU Cybersecurity Symposium.
+                </li>
+              </lu></p>
+              <p><ul>
+                <li>
+                  <b>Feb 2023:</b> Got accepted into the post-CHI summer school on Usable Privacy and Security.
+                </li>
+              </lu></p>
+              <p><ul>
+                <li>
                   <b>Mar 2022:</b> Been awarded the SCAI Doctoral Fellowship.
                 </li>
               </lu></p>
@@ -541,6 +551,13 @@
         <div class="col s12 m6 l6">
           <div class="card">
             <div class="card-content">
+              <p><ul>
+                <li>
+                  <b>Protik Bose Pranto</b>, Waqar Hassan Khan, Sahar Abdelnabi, Rebecca Weil, Mario Fritz and Rakibul Hasan. From Bad to Worse: Using Private Data to Propagate Disinformation on Online Platforms with a Greater Efficiency. Design x Policy (CHI Workshop (2023).
+                  <a href="https://cornell.app.box.com/s/h1442ce40mva2e4mwzfcinka407v7zf6" target="_blank"><span><b>[pdf]</b></span></a>  
+                </li>
+              </lu></p>
+              <p><ul>
               <p><ul>
                 <li>
                   <b>Protik Bose Pranto</b>, Bishal Basak Papan, and Md. Saidur Rahman. k-Safe Labelings of Connected Graphs. IEEE International Conference on Telecommunications and Photonics, ICTP (2021).
