--- a/index.html
+++ b/index.html
@@ -553,26 +553,26 @@
             <div class="card-content">
               <p><ul>
                 <li>
-                  <b>Protik Bose Pranto</b>, Waqar Hassan Khan, Sahar Abdelnabi, Rebecca Weil, Mario Fritz and Rakibul Hasan. From Bad to Worse: Using Private Data to Propagate Disinformation on Online Platforms with a Greater Efficiency. Design x Policy (CHI Workshop (2023).
+                  <b>Protik Bose Pranto</b>, Waqar Hassan Khan, Sahar Abdelnabi, Rebecca Weil, Mario Fritz and Rakibul Hasan. <b>From Bad to Worse: Using Private Data to Propagate Disinformation on Online Platforms with a Greater Efficiency</b>. Design x Policy (CHI Workshop (2023).
                   <a href="https://cornell.app.box.com/s/h1442ce40mva2e4mwzfcinka407v7zf6" target="_blank"><span><b>[pdf]</b></span></a>  
                 </li>
               </lu></p>
               <p><ul>
               <p><ul>
                 <li>
-                  <b>Protik Bose Pranto</b>, Bishal Basak Papan, and Md. Saidur Rahman. k-Safe Labelings of Connected Graphs. IEEE International Conference on Telecommunications and Photonics, ICTP (2021).
+                  <b>Protik Bose Pranto</b>, Bishal Basak Papan, and Md. Saidur Rahman. <b>k-Safe Labelings of Connected Graphs</b>. IEEE International Conference on Telecommunications and Photonics, ICTP (2021).
                   <a href="https://www.researchgate.net/profile/Protik_Pranto/publication/359313081_k-Safe_Labelings_of_Connected_Graphs/links/62346c13d545b7729402327c/k-Safe-Labelings-of-Connected-Graphs.pdf" target="_blank"><span><b>[pdf]</b></span></a>  
                 </li>
               </lu></p>
               <p><ul>
                 <li>
-                  Bishal Basak Papan, <b>Protik Bose Pranto</b>, and Md. Saidur Rahman. On 2-Interval Pairwise Compatibility Properties of Two Classes of Grid Graphs. The Computer Journal, COMPJ (2021).
+                  Bishal Basak Papan, <b>Protik Bose Pranto</b>, and Md. Saidur Rahman. <b>On 2-Interval Pairwise Compatibility Properties of Two Classes of Grid Graphs</b>. The Computer Journal, COMPJ (2021).
                   <a href="https://academic.oup.com/comjnl/advance-article-abstract/doi/10.1093/comjnl/bxac011/6536120" target="_blank"><span><b>[pdf]</b></span></a>
                 </li>
               </lu></p>
               <p><ul>
                 <li>
-                  <b>Protik Bose Pranto</b>, Syed Zami-Ul-Haque Navid, Protik Dey, Gias Uddin, and Anindya Iqbal. Are You Misinformed? A Study of Covid-Related Fake News in Bengali on Facebook.
+                  <b>Protik Bose Pranto</b>, Syed Zami-Ul-Haque Navid, Protik Dey, Gias Uddin, and Anindya Iqbal. <b>Are You Misinformed? A Study of Covid-Related Fake News in Bengali on Facebook</b>.
                   <a href="https://arxiv.org/ftp/arxiv/papers/2203/2203.11669.pdf" target="_blank"><span><b>[arXiv]</b></span></a>
                 </li>
               </lu></p>
