--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
           class="teal-text hoverline"><b>Prof. Dr. Rakibul Hasan.</b></a>
         </p>    
         <p>
-          My research interests include Human-centered AI Engineering, Computer Vision, Natural Language Processing, Graph Theory, Human-Computer Interaction, Machine Learning and it's applications. 
+          My research interests include Security and Privacy, Human-centered AI Engineering, Machine Learning and it's applications. 
           I enjoy researching Machine Learning topics and applying my skills to tackle problems that intrigue me. I am also enthusiastic about creating sophisticated programs that solve real-world problems for millions of users.
         </p>
         <p>
@@ -354,7 +354,22 @@
             <div class="card-content">
               <p><ul>
                 <li>
-                  <b>Apr 2023:</b> presented my current research at the ASU Cybersecurity Symposium.
+                  <b>July 2023:</b> Awarded USENIX Security Student Grant.
+                </li>
+              </lu></p>
+              <p><ul>
+                <li>
+                  <b>June 2023:</b> Poster on Targeted Disinformation got accepted in SOUPS'23.
+                </li>
+              </lu></p>
+              <p><ul>
+                <li>
+                  <b>June 2023:</b> Poster on EdTech App Review Analysis got accepted in SOUPS'23.
+                </li>
+              </lu></p>
+              <p><ul>
+                <li>
+                  <b>Apr 2023:</b> Presented my current research at the ASU Cybersecurity Symposium.
                 </li>
               </lu></p>
               <p><ul>
@@ -392,7 +407,7 @@
 
     <!-- Third Section: Experience -->
     <section id="experience" class="section scrollspy">
-      <h3 class="page-title white-text teal">Experience</h3>
+      <h3 class="page-title white-text teal">Past Experiences</h3>
       <div class="container">
         <div class="col">
 
@@ -553,7 +568,21 @@
             <div class="card-content">
               <p><ul>
                 <li>
-                  <b>Protik Bose Pranto</b>, Waqar Hassan Khan, Sahar Abdelnabi, Rebecca Weil, Mario Fritz and Rakibul Hasan. <b>From Bad to Worse: Using Private Data to Propagate Disinformation on Online Platforms with a Greater Efficiency</b>. Design x Policy (CHI Workshop (2023).
+                  <b>Protik Bose Pranto</b>, Waqar Hassan Khan, Sahar Abdelnabi, Rebecca Weil, Mario Fritz and Rakibul Hasan. <b>Poster: Understanding the Effect of Private Data in Disinformation Propagation</b>. Nineteenth Symposium on Usable Privacy and Security (SOUPS 2023).
+                  <a href="https://persue-lab-asu.github.io/assets/publications/SOUPS_23_poster_misinfo/abstract.pdf" target="_blank"><span><b>[pdf]</b></span></a>
+                  <a href="https://persue-lab-asu.github.io/assets/publications/SOUPS_23_poster_misinfo/poster.pdf" target="_blank"><span><b>[poster]</b></span></a>    
+                </li>
+              </lu></p>
+              <p><ul>
+                <li>
+                  Waqar Hassan Khan, <b>Protik Bose Pranto</b>, Tianyi Yang, and Rakibul Hasan. <b>Poster: Exploring Privacy and Security Concerns of EdTech Users: A Qualitative Analysis of User Written Reviews</b>. Nineteenth Symposium on Usable Privacy and Security (SOUPS 2023).
+                  <a href="https://persue-lab-asu.github.io/assets/publications/SOUPS_23_poster_edtech/abstract.pdf" target="_blank"><span><b>[pdf]</b></span></a>  
+                  <a href="https://persue-lab-asu.github.io/assets/publications/SOUPS_23_poster_edtech/poster.pdf" target="_blank"><span><b>[poster]</b></span></a>
+                </li>
+              </lu></p>
+              <p><ul>
+                <li>
+                  <b>Protik Bose Pranto</b>, Waqar Hassan Khan, Sahar Abdelnabi, Rebecca Weil, Mario Fritz and Rakibul Hasan. <b>From Bad to Worse: Using Private Data to Propagate Disinformation on Online Platforms with a Greater Efficiency</b>. Design x Policy (CHI Workshop (2023)).
                   <a href="https://cornell.app.box.com/s/h1442ce40mva2e4mwzfcinka407v7zf6" target="_blank"><span><b>[pdf]</b></span></a>  
                 </li>
               </lu></p>
