--- a/index.html
+++ b/index.html
@@ -294,9 +294,8 @@
           </h2>
         </blockquote> -->    
         <p>
-          I am a first year PhD student in the Department of Computer Science at <a href="https://www.asu.edu/" target="_blank"
-          class="teal-text hoverline"><b>Arizona State University.</b></a> My research advisor is <a href="https://rakib062.github.io/" target="_blank"
-          class="teal-text hoverline"><b>Prof. Dr. Rakibul Hasan.</b></a>
+          I am a second year PhD student in the Department of Computer Science at <a href="https://www.asu.edu/" target="_blank"
+          class="teal-text hoverline"><b>Arizona State University.</b></a>
         </p>    
         <p>
           My research interests include Security and Privacy, Human-centered AI Engineering, Machine Learning and it's applications. 
